; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_pages.c_os_pages_trim.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/src/extr_pages.c_os_pages_trim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64, i64, i64, i32*)* @os_pages_trim to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @os_pages_trim(i8* %0, i64 %1, i64 %2, i64 %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i32* %4, i32** %10, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = ptrtoint i8* %13 to i64
  %15 = load i64, i64* %8, align 8
  %16 = add i64 %14, %15
  %17 = inttoptr i64 %16 to i8*
  store i8* %17, i8** %11, align 8
  %18 = load i64, i64* %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i64, i64* %9, align 8
  %21 = add i64 %19, %20
  %22 = icmp uge i64 %18, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* %8, align 8
  %27 = sub i64 %25, %26
  %28 = load i64, i64* %9, align 8
  %29 = sub i64 %27, %28
  store i64 %29, i64* %12, align 8
  %30 = load i64, i64* %8, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %5
  %33 = load i8*, i8** %6, align 8
  %34 = load i64, i64* %8, align 8
  %35 = call i32 @os_pages_unmap(i8* %33, i64 %34)
  br label %36

36:                                               ; preds = %32, %5
  %37 = load i64, i64* %12, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %47

39:                                               ; preds = %36
  %40 = load i8*, i8** %11, align 8
  %41 = ptrtoint i8* %40 to i64
  %42 = load i64, i64* %9, align 8
  %43 = add i64 %41, %42
  %44 = inttoptr i64 %43 to i8*
  %45 = load i64, i64* %12, align 8
  %46 = call i32 @os_pages_unmap(i8* %44, i64 %45)
  br label %47

47:                                               ; preds = %39, %36
  %48 = load i8*, i8** %11, align 8
  ret i8* %48
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @os_pages_unmap(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
